# pico-project

./: .gitignore  CMakeLists.txt  README.md
master/: SPI_isr.c
receiver/: SPI.c  SPI.py  SPI_isr.c  SPI_thread.c  SPI_wr.c  decoder.py
src/: CMakeLists.txt  README.md
src/SPI_test/: CMakeLists.txt  SPI_test.c
src/adc_A/: CMakeLists.txt  adc_A.c  adc_timer.h
src/adc_B/: CMakeLists.txt  README.md  adc_B.c  adc_tr.h
src/adc_multi/: CMakeLists.txt  README.md  adc_multi.c  adc_multi.h  adc_tr.h  skeleton.c
src/adc_trap/: CMakeLists.txt  README.md  adc_trap.c
src/blink/: README.md  blink.c
